--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -17,7 +17,7 @@
         {% endif %}
     {% endfor %}
 
-    <div class="content">
+    <div class="container content">
         <div class="overview">
             {% if stadium_search_result %}
                 <h1 id="title">Kết quả tìm kiếm</h1>
@@ -194,6 +194,8 @@
             </div>
         </div>
     </div>
+
+
 
     <div class="modal fade " id="notification-success" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
