--- a/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
+++ b/stadium/book_stadium/templates/book_stadium/stadiumDetail.html
@@ -7,123 +7,159 @@
 <link rel="stylesheet" href="{% static 'css/stadiumDetail.css' %}">
 {% endblock %}
 {% block content %}
-{% for message in messages %}
-    <div class="alert alert-success" role="alert">
-        {{message}}
-    </div>
-{% endfor %}
-<div class="stadium-detail">
-    <h1 class="stadium-name pt-2">{{ stadium.name }}</h1>
-    <h2 class="col-5">
-        Thông tin chung
-    </h2>
-    <img class="stadium-img" src="{{stadium.image.url}}" alt="stadium-image">
-    <div class="form-info">
-        <div class="save-or-delete-form">
-            <form action="" method="POST" class="stadium-form-detail" enctype="multipart/form-data">
-                {% csrf_token %}
-
-                {% if stadium.owner == user %}
-                    {% for input in formDetail.visible_fields %}
-                        <div class="form-group mt-4">
-                            <label for="exampleInputEmail1">{{input.label}} </label>
-                            <div class="inputField">
-                                {{ input }}
-                                <i data-name="{{input.auto_id }}" class="fas fa-pen-square"></i>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    <input type="hidden" name="form_type" value="form_detail">
-                    <button type="submit" id="saveDetailBtn" class="btn btn-success mt-5" disabled="true">Lưu thông tin</button>
-                {% else %}
-                    {% for input in form_detail_for_user.visible_fields %}
-                        <div class="form-group mt-4">
-                            <label for="exampleInputEmail1">{{input.label}} </label>
-                            <div class="inputField">
-                                {{ input }}
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            </form>
-            {% if stadium.owner == user %}
-                <button class="stadium-form-delete btn btn-danger" onclick="turnOnDeleteModal()">Xóa</button>
-            {% endif %}
+    {% for message in messages %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
         </div>
-        <div class="form-timeframe">
-            <h2>
-            Các khung giờ
-            </h2>
-            <form action="{% url 'stadium_detail' stadium.id %}" method="POST" class="stadium-form-time-frames"
-            id="stadium-form-time-frames">
-            {{ formTimeFrame.management_form }}
-            {% csrf_token %}
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Khung giờ</th>
-                    <th class="col-2">Giá tiền</th>
-                </tr>
-                </thead>
-                <tbody>
-
-                {% for form in formTimeFrame %}
-                    {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                    {% endfor %}
-                    <tr class="time-frames">
-                        <td>{{ form.time_frame }}
-                        </td>
-                        <td>
-                        <div class="inputField text-center">
-                            {{ form.price }}
-                            <!-- <input type="text" class="form-control" id="{{forloop.counter0}}" name="price" disabled="true" value="{{ form.price.value|intcomma }}"> -->
-                            {% if stadium.owner == user %}
-                                <i data-name="{{form.price.auto_id }}" class="fas fa-pen-square"></i>
-                            {% endif %}
-                        </div>
-                        </td>
-
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            <input type="hidden" name="form_type" value="form_time">
-            {% if stadium.owner == user %}
-                <button type="submit" id="saveTimeFramesBtn" class="btn btn-success mt-5 mb-5" disabled="true">Lưu khung giờ</button>
-            {% endif %}
-            </form>
-        </div>
-    </div>
-    {% if stadium.owner != user %}
-        <div class="back-btn">
-            <a class="btn btn-secondary" href="{% url 'book_stadium' %}">Quay lại</a>
-        </div>
-    {% endif %}
-</div>
-
-<div class="modal fade " id="delete-form-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Lưu ý</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Bạn có chắc là muốn xóa sân không?</p>
-            </div>
-            <div class="modal-footer">
-                <form class="form-accept" method="POST" action="">
+    {% endfor %}
+    <div class="container stadium-detail">
+        <h1 class="stadium-name pt-2">{{ stadium.name }}</h1>
+        <h2 class="col-5">
+            Thông tin chung
+        </h2>
+        <img class="stadium-img" src="{{stadium.image.url}}" alt="stadium-image">
+        <div class="form-info">
+            <div class="save-or-delete-form">
+                <form action="" method="POST" class="stadium-form-detail" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <input type="hidden" name="form_type" value="delete-input">
-                    <input type="submit" class="btn btn-success" value="Có">
+
+                    {% if stadium.owner == user %}
+                        {% for input in formDetail.visible_fields %}
+                            <div class="form-group mt-4">
+                                <!-- <label for="exampleInputEmail1">{{ input.label }} </label> -->
+                                <div class="inputField">
+                                    {{ input|as_crispy_field }}
+                                    <i data-name="{{input.auto_id }}" class="fas fa-pen-square"></i>
+                                </div>
+                            </div>
+                        {% endfor %}
+                        <input type="hidden" name="form_type" value="form_detail">
+                        <button type="submit" id="saveDetailBtn" class="btn btn-success mt-5" disabled="true">Lưu thông tin</button>
+                    {% else %}
+                        {% for input in form_detail_for_user.visible_fields %}
+                            <div class="form-group mt-4">
+                                <label for="exampleInputEmail1">{{input.label}} </label>
+                                <div class="inputField">
+                                    {{ input }}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </form>
-                <input type="submit" class="btn btn-secondary" data-bs-dismiss="modal" value="Hủy">
+                {% if stadium.owner == user %}
+                    <button class="stadium-form-delete btn btn-danger" onclick="turnOnDeleteModal()">Xóa</button>
+                {% endif %}
+            </div>
+            <div class="form-timeframe">
+                <h2>
+                Các khung giờ
+                </h2>
+                <form action="{% url 'stadium_detail' stadium.id %}" method="POST" class="stadium-form-time-frames"
+                id="stadium-form-time-frames">
+                {{ formTimeFrame.management_form }}
+                {% csrf_token %}
+                <table class="table">
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Khung giờ</th>
+                        <th class="col-2">Giá tiền</th>
+                        <th>Trạng thái phục vụ</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    {% for form in formTimeFrame %}
+                        {% for hidden in form.hidden_fields %}
+                            {{ hidden }}
+                        {% endfor %}
+                        <tr class="time-frames">
+                            <td>
+                                {{ form.time_frame }}
+                            </td>
+                            <td>
+                                <div class="inputField text-center">
+                                    {{ form.price }}
+                                    <!-- <input type="text" class="form-control" id="{{forloop.counter0}}" name="price" disabled="true" value="{{ form.price.value|intcomma }}"> -->
+                                </div>
+                            </td>
+                            <td>
+                                {% if stadium.owner == user %}
+                                    <span class="timeframe-state">{{ form.is_open }}</span>
+                                {% else %}
+                                    {% if form.is_open.value == False %}
+                                        <span>Đóng cửa</span>
+                                    {% else %}
+                                        <span>Mở cửa</span>
+                                    {% endif %}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if stadium.owner == user %}
+                                    <i data-name="{{ form.price.auto_id }}" data-check="{{ form.is_open.auto_id }}" class="fas fa-pen-square"></i>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <input type="hidden" name="form_type" value="form_time">
+                {% if stadium.owner == user %}
+                    <button type="submit" id="saveTimeFramesBtn" class="btn btn-success mt-5 mb-5" disabled="true">Lưu khung giờ</button>
+                {% endif %}
+                </form>
+            </div>
+        </div>
+        {% if stadium.owner != user %}
+            <div class="back-btn">
+                <a class="btn btn-secondary" href="{% url 'book_stadium' %}">Quay lại</a>
+            </div>
+        {% endif %}
+    </div>
+
+    <hr>
+    <div class="comments-section">
+        <div class="all-comments">
+            {% for comment in comments_of_stadium.comment.all %}
+                <a class="mr-2" href="#">{{ comment.user.username}}</a>
+                <h4>{{comment.comment}}</h4>
+                <hr>
+            {% endfor %}
+        </div>
+
+        <div class="stadium-comments">
+            <form id="comment-form" method="POST", action="">
+              {% csrf_token %}
+              {{comment_form.comment|as_crispy_field}}
+              <input type="hidden" name="form_type" value="form-comment">
+              <button class="btn btn-secondary" type="submit">Bình luận</button>
+            </form>
+        </div>
+    </div>
+
+
+    <div class="modal fade " id="delete-form-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Lưu ý</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Bạn có chắc là muốn xóa sân không?</p>
+                </div>
+                <div class="modal-footer">
+                    <form class="form-accept" method="POST" action="">
+                        {% csrf_token %}
+                        <input type="hidden" name="form_type" value="delete-input">
+                        <input type="submit" class="btn btn-success" value="Có">
+                    </form>
+                    <input type="submit" class="btn btn-secondary" data-bs-dismiss="modal" value="Hủy">
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
 {% block javascript %}
 <script src="{% static 'js/stadiumDetail.js' %}"></script>
