--- a/stadium/static/css/book_stadium.css
+++ b/stadium/static/css/book_stadium.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
+
 }
 
 .overview {
@@ -34,15 +35,16 @@
     padding-left: 1%;
 }
 
-.stadium-timeframe {
+/* .stadium-timeframe {
     margin-bottom: 50px;
     margin-left: 10px;
-}
+} */
 
 .stadium-timeframe h3 {
     height: 35px;
     text-align: center;
-    background-color: #00b9f2;
+    background-color: rgb(141, 141, 141);
+    color: bisque;
 }
 
 .stadium-detail {
@@ -76,7 +78,7 @@
 .form-submit {
     width: 30%;
     position: fixed;
-    right: 0;
+    right: 2%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -87,11 +89,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.dropdown-menu.show {
-    display: block;
-    width: 100%;
 }
 
 .form-search, .form-order {
