--- a/stadium/static/css/stadiumDetail.css
+++ b/stadium/static/css/stadiumDetail.css
@@ -1,5 +1,6 @@
 .stadium-detail{
     width: 80%;
+    height: 185vh;
     margin: auto;
 }
 
@@ -14,7 +15,7 @@
 
 .inputField {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 }
 
 i{
@@ -25,6 +26,7 @@ i{
 .col {
     display: flex;
     flex-direction: column;
+    height: auto;
 }
 
 h1{
@@ -59,5 +61,28 @@ h1{
 
 .back-btn {
     text-align: center;
+}
+
+#div_id_comment {
+    width: 70%;
+}
+
+#comment-form button {
+    margin: 1%;
+}
+
+.comments-section {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 20%;
+}
+
+.all-comments {
+    width: 70%;
+    margin: auto;
+}
+
+.timeframe-state input{
+    margin-top: 1.7%;
 }
 
