--- a/stadium/book_stadium/templates/book_stadium/createStadium.html
+++ b/stadium/book_stadium/templates/book_stadium/createStadium.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{% static 'css/createStadium.css' %}">
 {% endblock %}
 {% block content %}
-<div class="alert alert-success mt-3 " role="alert">
+<div class="alert alert-primary mt-3 " role="alert">
     Hãy nhập thông tin sân của bạn
 </div>
 <div class="add-stadium shadow">
@@ -17,7 +17,7 @@
       {{input}}
     </div>
     {% endfor %}
-    <input type="submit" value="Thêm" class="btn btn-success mt-4">
+    <input type="submit" value="Thêm" class="btn btn-primary mt-4">
   </form>
 
 </div>
