--- a/stadium/static/css/userProfile.css
+++ b/stadium/static/css/userProfile.css
@@ -10,3 +10,11 @@
     text-align: center;
     font-size: 30px;
 }
+
+.alert-success {
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+    width: 100%;
+    text-align: center;
+}
