--- a/stadium/book_stadium/templates/book_stadium/book_stadium.html
+++ b/stadium/book_stadium/templates/book_stadium/book_stadium.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block content %}
     {% for message in messages %}
-        {% if message.tags == 'error' %}
-            <div id="error" class="alert alert-danger" role="alert">
+        {% if message.tags == 'warning' %}
+            <div id="warning" class="alert alert-warning" role="alert">
                 {{ message }}
             </div>
         {% else %}
