finished star rating for stadium

--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -118,6 +118,12 @@
                             {% endfor %}
                         </ul>
                     </li>
+
+                    <li>
+                      <a href="{% url 'owner_profit' user.pk %}" class="manage-btn">
+                        Doanh thu
+                      </a>
+                    </li>
                 </ul>
             </nav>
         {% endif %}
