--- a/stadium/static/css/searchStadium.css
+++ b/stadium/static/css/searchStadium.css
@@ -1,9 +1,5 @@
 .stadiums {
     display: flex;
-    padding: 5%;
-    background-color: #e4e3e3
-}
-
-.col {
-    height: 100vh;
+    flex-wrap: wrap;
+    background-color: #e4e3e3;
 }
